force-app/main/default/objects/NSSales_609_1FSSalesManager__c/NSSales_609_1FSSalesManager__c.object-meta.xml
<CustomObject>
    <label>609.1 FS Manager Routing</label>
    <nameField>
        <displayFormat>FSMR-{0000}</displayFormat>
        <label>NSSales_609.1FSSalesManager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>609.1FSSalesManagers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>