force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_Director__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NSSales_609_1FSSalesManagers</relationshipName>
    <type>Lookup</type>
</CustomField>