force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_Field_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Field_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NSSales_609_1FSSalesManagers1</relationshipName>
    <type>Lookup</type>
</CustomField>