force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_FSM_DirectorEmail__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_FSM_DirectorEmail__c</fullName>
    <formula>NSSales_609_1_Director__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSM_DirectorEmail</label>
    <type>Text</type>
</CustomField>