force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_FSM_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_FSM_Email__c</fullName>
    <formula>NSSales_609_1_Field_Sales_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSM_Email</label>
    <type>Text</type>
</CustomField>