force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_FSM_Territory__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_FSM_Territory__c</fullName>
    <label>FSM_Territory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>