force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_HMP__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_HMP__c</fullName>
    <label>HMP</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>