force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_LMP__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_LMP__c</fullName>
    <label>LMP</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>