force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_OperatingDivision__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_OperatingDivision__c</fullName>
    <label>Operating Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALABAMA</fullName>
            </value>
            <value>
                <fullName>DEARBORN</fullName>
            </value>
            <value>
                <fullName>GEORGIA</fullName>
            </value>
            <value>
                <fullName>HARRISBURG</fullName>
            </value>
            <value>
                <fullName>ILLINOIS</fullName>
            </value>
            <value>
                <fullName>LAKE</fullName>
            </value>
            <value>
                <fullName>PIEDMONT</fullName>
            </value>
            <value>
                <fullName>PITTSBURGH</fullName>
            </value>
            <value>
                <fullName>POCAHONTAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>