force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_Sales_Title__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Sales_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>