force-app/main/default/objects/NSSales_609_1FSSalesManager__c/fields/NSSales_609_1_UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_UniqueIdentifier__c</fullName>
    <description>This is a unique identifier to fetch the record details.</description>
    <formula>Text(NSSales_609_1_OperatingDivision__c) +&#39;:&#39;+ Text(NSSales_609_1_Sales_Prefix__c) +&#39;:&#39;+Text(NSSales_609_1_Suffix__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Identifier</label>
    <type>Text</type>
</CustomField>