force-app/main/default/objects/NSSales_609_1FSSalesManager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NSSales_609_1_Field_Sales_Manager__c</columns>
    <columns>NSSales_609_1_FSM_Email__c</columns>
    <columns>NSSales_609_1_Director__c</columns>
    <columns>NSSales_609_1_FSM_DirectorEmail__c</columns>
    <columns>NSSales_609_1_OperatingDivision__c</columns>
    <columns>NSSales_609_1_LMP__c</columns>
    <columns>NSSales_609_1_HMP__c</columns>
    <columns>NSSales_609_1_Sales_Prefix__c</columns>
    <columns>NSSales_609_1_Suffix__c</columns>
    <columns>NSSales_609_1_FSM_Territory__c</columns>
    <columns>NSSales_609_1_Sales_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>